Fixing some spacing

--- a/app/webroot/css/application.less
+++ b/app/webroot/css/application.less
@@ -57,6 +57,7 @@ body {
 .post {
 	margin-bottom:30px;
 	padding-bottom:30px;
+	padding-right:10px;
 	border-bottom:1px solid #EEE;
 	h2 {
 		margin-bottom:0px;
@@ -71,7 +72,6 @@ body {
 		float:right;
 		margin:0;
 		padding:0;
-		margin-right:10px;
 		li {
 			display:inline;
 		}
